Project

General

Profile

Actions

Bug #5038

closed

krbd: fix parent request size assumption

Added by Alex Elder almost 11 years ago. Updated almost 11 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
Regression:
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

When Josh was reviewing a recent kernel rbd patch he pointed
out that a variable named "obj_size" was misleading because it
might not reflect the full size of an object (because it could
be clipped by parent_overlap).

That highlighted an underlying problem--that the code was
assuming the size of a "full" parent read request was the
size of a complete object, without taking the parent_overlap
into account.

This needs to be fixed.

Actions #1

Updated by Alex Elder almost 11 years ago

  • Status changed from In Progress to Fix Under Review

The following has been posted for review:

[PATCH] rbd: fix parent request size assumption

Actions #2

Updated by Alex Elder almost 11 years ago

  • Status changed from Fix Under Review to Resolved

The following was committed to the ceph-client "testing" branch:

ebda6408 rbd: fix parent request size assumption

Actions

Also available in: Atom PDF